--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   layout_grid: ^1.0.1
   flutter_layout_grid: ^2.0.7
   flutter_markdown: ^0.7.1
+  auto_size_text: ^3.0.0
+  collection: ^1.18.0
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
